dynamically set shift count, fix some css issues

--- a/Recode/style.css
+++ b/Recode/style.css
@@ -18,8 +18,7 @@ body {
 	height: 100dvh;
 	background-color: white;
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	align-items: baseline;
 	overflow: auto;
 }
 
@@ -33,11 +32,14 @@ body {
 	padding: 20px;
 	display: flex;
 	flex-direction: column;
+	row-gap: 0.5rem;
 }
 
 .table-save {
-	width: 700px;
+	width: fit-content;
 	padding-bottom: 24px;
+	padding-inline: 2rem;
+	margin: auto;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -88,6 +90,7 @@ h1 {
 
 	& .people {
 		width: 200px;
+		min-width: 4.5rem;
 	}
 
 	& .friday {
